Add endpoint for file download as octet-stream
